re PR rtl-optimization/6871 (const objects shouldn't be moved to .bss)

PR optimization/6871
        * varasm.c (assemble_variable): Leave constant zeroes in .rodata.

From-SVN: r64388